--- a/src/main/resources/templates/main/footer.html
+++ b/src/main/resources/templates/main/footer.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <footer>
+    <footer th:block th:fragment="footer">
         <div class="grid">
             <div class="footer-view-container">
                 <div class="footer-container">
