--- a/src/main/resources/templates/search/search.html
+++ b/src/main/resources/templates/search/search.html
@@ -17,7 +17,8 @@
 
 <body>
     <div class="wrap">
-
+      <header th:replace="~{main/header :: header}"></header>
+      <footer th:replace="~{main/footer :: footer}"></footer>
       <!-- 모임 게시판 Start -->
 
       <div class="main-container">
