--- a/src/main/resources/templates/friend-search/friend-search.html
+++ b/src/main/resources/templates/friend-search/friend-search.html
@@ -17,7 +17,8 @@
 
 <body>
     <div class="wrap">
-        <header style="width: 100%; height: 70px;position: fixed;top: 0;"></header>
+<!--        <header style="width: 100%; height: 70px;position: fixed;top: 0;"></header>-->
+        <header th:replace="~{main/header :: header}"></header>
 
         <div class="mypageContainer">
             <div class="sidebar-container">
@@ -200,7 +201,8 @@
     </div>
     </div>
 
-    <footer style="width: 100%; height: 26px;"></footer>
+<!--    <footer style="width: 100%; height: 26px;"></footer>-->
+    <footer th:replace="~{main/footer :: footer}"></footer>
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
