--- a/src/main/resources/templates/general-edit/general-edit.html
+++ b/src/main/resources/templates/general-edit/general-edit.html
@@ -18,7 +18,8 @@
 
 <body>
     <div class="wrap">
-        <header style="width: 100%; height: 70px;position: fixed;top: 0;"></header>
+<!--        <header style="width: 100%; height: 70px;position: fixed;top: 0;"></header>-->
+        <header th:replace="~{main/header :: header}"></header>
 
         <div class="main-container">
             <div class="grid">
@@ -97,7 +98,8 @@
             </div>
         </div>
 
-        <footer style="width: 100%; height: 26px;"></footer>
+<!--        <footer style="width: 100%; height: 26px;"></footer>-->
+        <footer th:replace="~{main/footer :: footer}"></footer>
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
