--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
@@ -17,9 +17,8 @@
 </head>
 
 <body>
+<header th:replace="~{main/header :: header}"></header>
     <div id="wrap">
-        <header style="width: 100%; height: 70px;position: fixed;top: 0;"></header>
-
         <div class="main-container">
             <div class="backdrop"></div>
             <!-- 매인의 배너부분 -->
@@ -601,12 +600,10 @@
             </div>
         </div>
     </div>
-
-    <footer style="width: 100%; height: 26px;"></footer>
-    </div>
+<footer th:replace="~{main/footer :: footer}"></footer>
 </body>
 <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-<script src="header.js"></script>
-<script src="../../static/js/banner.js"></script>
+<script src="/static/js/header-footer.js"></script>
+<script src="/static/js/banner.js"></script>
 
 </html>
