--- a/src/main/resources/templates/meeting-post/meeting-post.html
+++ b/src/main/resources/templates/meeting-post/meeting-post.html
@@ -18,7 +18,8 @@
 
 <body>
     <div class="wrap">
-        <header style="width: 100%; height: 70px;position: fixed;top: 0;"></header>
+<!--        <header style="width: 100%; height: 70px;position: fixed;top: 0;"></header>-->
+        <header th:replace="~{main/header :: header}"></header>
 
         <div class="main-container">
             <div class="backdrop"></div>
@@ -748,66 +749,67 @@
             </div>
         </div>
 
-        <footer style="width: 100%; height: 26px;"></footer>
-        <div class="post-action-modal">
-            <div class="action-modal-list">
-                <svg data-v-bd9f2bcc="" data-v-1fc573bf="" width="16" height="16" viewBox="0 0 16 16" fill="black"
-                    xmlns="http://www.w3.org/2000/svg" class="action-icon" data-v-45a3e27e=""
-                    style="fill: rgb(89, 95, 99);">
-                    <path data-v-bd9f2bcc="" fill-rule="evenodd" clip-rule="evenodd"
-                        d="M12 6.5V11H4V6.5C4 4.29086 5.79086 2.5 8 2.5C10.2091 2.5 12 4.29086 12 6.5ZM3 11.2676V6.5C3 3.73858 5.23858 1.5 8 1.5C10.7614 1.5 13 3.73858 13 6.5V11.2676C13.5978 11.6134 14 12.2597 14 13V14C14 14.5523 13.5523 15 13 15H3C2.44772 15 2 14.5523 2 14V13C2 12.2597 2.4022 11.6134 3 11.2676ZM4 12C3.44772 12 3 12.4477 3 13L3 14H13V13C13 12.4477 12.5523 12 12 12H4Z">
-                    </path>
-                </svg>
-                신고하기
-            </div>
-            <div class="action-modal-list">
-                <svg data-v-bd9f2bcc="" data-v-1fc573bf="" width="16" height="16" viewBox="0 0 16 16" fill="black"
-                    xmlns="http://www.w3.org/2000/svg" class="action-icon" data-v-45a3e27e=""
-                    style="fill: rgb(89, 95, 99);">
-                    <path data-v-bd9f2bcc="" fill-rule="evenodd" clip-rule="evenodd"
-                        d="M14 8C14 11.3137 11.3137 14 8 14C6.52314 14 5.17091 13.4664 4.12557 12.5815L12.5815 4.12557C13.4664 5.17091 14 6.52314 14 8ZM3.41847 11.8744L11.8744 3.41847C10.8291 2.53358 9.47685 2 8 2C4.68629 2 2 4.68629 2 8C2 9.47685 2.53358 10.8291 3.41847 11.8744ZM15 8C15 11.866 11.866 15 8 15C4.13401 15 1 11.866 1 8C1 4.13401 4.13401 1 8 1C11.866 1 15 4.13401 15 8Z">
-                    </path>
-                </svg>
-                차단하기
-            </div>
-            <div class="action-modal-list">
-                <svg id="Layer_1" style="enable-background:new 0 0 24 24; fill: rgb(89, 95, 99);" version="1.1"
-                    width="16" height="16" viewBox="0 0 24 24" class="action-icon" xml:space="preserve"
-                    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                    <path
-                        d="M19.607,18.746c0,0.881-0.716,1.624-1.597,1.624H5.231c-0.881,0-1.597-0.743-1.597-1.624V5.967  c0-0.881,0.716-1.571,1.597-1.571h7.454V3.332H5.231c-1.468,0-2.662,1.168-2.662,2.636v12.778c0,1.468,1.194,2.688,2.662,2.688  h12.778c1.468,0,2.662-1.221,2.662-2.688v-7.428h-1.065V18.746z">
-                    </path>
-                    <path
-                        d="M20.807,3.17c-0.804-0.805-2.207-0.805-3.012,0l-7.143,7.143c-0.068,0.068-0.117,0.154-0.14,0.247L9.76,13.571  c-0.045,0.181,0.008,0.373,0.14,0.506c0.101,0.101,0.237,0.156,0.376,0.156c0.043,0,0.086-0.005,0.129-0.016l3.012-0.753  c0.094-0.023,0.179-0.072,0.247-0.14l7.143-7.143c0.402-0.402,0.624-0.937,0.624-1.506S21.21,3.572,20.807,3.17z M13.016,12.467  l-2.008,0.502l0.502-2.008l5.909-5.909l1.506,1.506L13.016,12.467z M20.054,5.428l-0.376,0.376l-1.506-1.506l0.376-0.376  c0.402-0.402,1.104-0.402,1.506,0c0.201,0.201,0.312,0.468,0.312,0.753C20.366,4.96,20.255,5.227,20.054,5.428z">
-                    </path>
-                </svg>
-                수정하기
-            </div>
-            <div class="action-modal-list">
-                <svg data-name="Layer 1" id="Layer_1" width="16" height="16" viewBox="0 0 48 48"
-                    xmlns="http://www.w3.org/2000/svg" class="action-icon" style="fill: rgb(89, 95, 99);">
-                    <title></title>
-                    <path d="M42,3H28a2,2,0,0,0-2-2H22a2,2,0,0,0-2,2H6A2,2,0,0,0,6,7H42a2,2,0,0,0,0-4Z"></path>
-                    <path
-                        d="M39,9a2,2,0,0,0-2,2V43H11V11a2,2,0,0,0-4,0V45a2,2,0,0,0,2,2H39a2,2,0,0,0,2-2V11A2,2,0,0,0,39,9Z">
-                    </path>
-                    <path d="M21,37V19a2,2,0,0,0-4,0V37a2,2,0,0,0,4,0Z"></path>
-                    <path d="M31,37V19a2,2,0,0,0-4,0V37a2,2,0,0,0,4,0Z"></path>
-                </svg>
-                삭제하기
-            </div>
-            <hr class="action-modal-devider">
-            <div class="action-modal-list back">
-                <svg data-v-bd9f2bcc="" data-v-1fc573bf="" width="16" height="16" viewBox="0 0 16 16" fill="black"
-                    xmlns="http://www.w3.org/2000/svg" class="action-icon" data-v-45a3e27e=""
-                    style="fill: rgb(89, 95, 99);">
-                    <path data-v-bd9f2bcc="" fill-rule="evenodd" clip-rule="evenodd"
-                        d="M3.64645 3.64645C3.84171 3.45118 4.15829 3.45118 4.35355 3.64645L8 7.29289L11.6464 3.64645C11.8417 3.45118 12.1583 3.45118 12.3536 3.64645C12.5488 3.84171 12.5488 4.15829 12.3536 4.35355L8.70711 8L12.3536 11.6464C12.5488 11.8417 12.5488 12.1583 12.3536 12.3536C12.1583 12.5488 11.8417 12.5488 11.6464 12.3536L8 8.70711L4.35355 12.3536C4.15829 12.5488 3.84171 12.5488 3.64645 12.3536C3.45118 12.1583 3.45118 11.8417 3.64645 11.6464L7.29289 8L3.64645 4.35355C3.45118 4.15829 3.45118 3.84171 3.64645 3.64645Z">
-                    </path>
-                </svg>
-                취소하기
-            </div>
-        </div>
+        <footer th:replace="~{main/footer :: footer}"></footer>
+<!--        <footer style="width: 100%; height: 26px;"></footer>-->
+<!--        <div class="post-action-modal">-->
+<!--            <div class="action-modal-list">-->
+<!--                <svg data-v-bd9f2bcc="" data-v-1fc573bf="" width="16" height="16" viewBox="0 0 16 16" fill="black"-->
+<!--                    xmlns="http://www.w3.org/2000/svg" class="action-icon" data-v-45a3e27e=""-->
+<!--                    style="fill: rgb(89, 95, 99);">-->
+<!--                    <path data-v-bd9f2bcc="" fill-rule="evenodd" clip-rule="evenodd"-->
+<!--                        d="M12 6.5V11H4V6.5C4 4.29086 5.79086 2.5 8 2.5C10.2091 2.5 12 4.29086 12 6.5ZM3 11.2676V6.5C3 3.73858 5.23858 1.5 8 1.5C10.7614 1.5 13 3.73858 13 6.5V11.2676C13.5978 11.6134 14 12.2597 14 13V14C14 14.5523 13.5523 15 13 15H3C2.44772 15 2 14.5523 2 14V13C2 12.2597 2.4022 11.6134 3 11.2676ZM4 12C3.44772 12 3 12.4477 3 13L3 14H13V13C13 12.4477 12.5523 12 12 12H4Z">-->
+<!--                    </path>-->
+<!--                </svg>-->
+<!--                신고하기-->
+<!--            </div>-->
+<!--            <div class="action-modal-list">-->
+<!--                <svg data-v-bd9f2bcc="" data-v-1fc573bf="" width="16" height="16" viewBox="0 0 16 16" fill="black"-->
+<!--                    xmlns="http://www.w3.org/2000/svg" class="action-icon" data-v-45a3e27e=""-->
+<!--                    style="fill: rgb(89, 95, 99);">-->
+<!--                    <path data-v-bd9f2bcc="" fill-rule="evenodd" clip-rule="evenodd"-->
+<!--                        d="M14 8C14 11.3137 11.3137 14 8 14C6.52314 14 5.17091 13.4664 4.12557 12.5815L12.5815 4.12557C13.4664 5.17091 14 6.52314 14 8ZM3.41847 11.8744L11.8744 3.41847C10.8291 2.53358 9.47685 2 8 2C4.68629 2 2 4.68629 2 8C2 9.47685 2.53358 10.8291 3.41847 11.8744ZM15 8C15 11.866 11.866 15 8 15C4.13401 15 1 11.866 1 8C1 4.13401 4.13401 1 8 1C11.866 1 15 4.13401 15 8Z">-->
+<!--                    </path>-->
+<!--                </svg>-->
+<!--                차단하기-->
+<!--            </div>-->
+<!--            <div class="action-modal-list">-->
+<!--                <svg id="Layer_1" style="enable-background:new 0 0 24 24; fill: rgb(89, 95, 99);" version="1.1"-->
+<!--                    width="16" height="16" viewBox="0 0 24 24" class="action-icon" xml:space="preserve"-->
+<!--                    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">-->
+<!--                    <path-->
+<!--                        d="M19.607,18.746c0,0.881-0.716,1.624-1.597,1.624H5.231c-0.881,0-1.597-0.743-1.597-1.624V5.967  c0-0.881,0.716-1.571,1.597-1.571h7.454V3.332H5.231c-1.468,0-2.662,1.168-2.662,2.636v12.778c0,1.468,1.194,2.688,2.662,2.688  h12.778c1.468,0,2.662-1.221,2.662-2.688v-7.428h-1.065V18.746z">-->
+<!--                    </path>-->
+<!--                    <path-->
+<!--                        d="M20.807,3.17c-0.804-0.805-2.207-0.805-3.012,0l-7.143,7.143c-0.068,0.068-0.117,0.154-0.14,0.247L9.76,13.571  c-0.045,0.181,0.008,0.373,0.14,0.506c0.101,0.101,0.237,0.156,0.376,0.156c0.043,0,0.086-0.005,0.129-0.016l3.012-0.753  c0.094-0.023,0.179-0.072,0.247-0.14l7.143-7.143c0.402-0.402,0.624-0.937,0.624-1.506S21.21,3.572,20.807,3.17z M13.016,12.467  l-2.008,0.502l0.502-2.008l5.909-5.909l1.506,1.506L13.016,12.467z M20.054,5.428l-0.376,0.376l-1.506-1.506l0.376-0.376  c0.402-0.402,1.104-0.402,1.506,0c0.201,0.201,0.312,0.468,0.312,0.753C20.366,4.96,20.255,5.227,20.054,5.428z">-->
+<!--                    </path>-->
+<!--                </svg>-->
+<!--                수정하기-->
+<!--            </div>-->
+<!--            <div class="action-modal-list">-->
+<!--                <svg data-name="Layer 1" id="Layer_1" width="16" height="16" viewBox="0 0 48 48"-->
+<!--                    xmlns="http://www.w3.org/2000/svg" class="action-icon" style="fill: rgb(89, 95, 99);">-->
+<!--                    <title></title>-->
+<!--                    <path d="M42,3H28a2,2,0,0,0-2-2H22a2,2,0,0,0-2,2H6A2,2,0,0,0,6,7H42a2,2,0,0,0,0-4Z"></path>-->
+<!--                    <path-->
+<!--                        d="M39,9a2,2,0,0,0-2,2V43H11V11a2,2,0,0,0-4,0V45a2,2,0,0,0,2,2H39a2,2,0,0,0,2-2V11A2,2,0,0,0,39,9Z">-->
+<!--                    </path>-->
+<!--                    <path d="M21,37V19a2,2,0,0,0-4,0V37a2,2,0,0,0,4,0Z"></path>-->
+<!--                    <path d="M31,37V19a2,2,0,0,0-4,0V37a2,2,0,0,0,4,0Z"></path>-->
+<!--                </svg>-->
+<!--                삭제하기-->
+<!--            </div>-->
+<!--            <hr class="action-modal-devider">-->
+<!--            <div class="action-modal-list back">-->
+<!--                <svg data-v-bd9f2bcc="" data-v-1fc573bf="" width="16" height="16" viewBox="0 0 16 16" fill="black"-->
+<!--                    xmlns="http://www.w3.org/2000/svg" class="action-icon" data-v-45a3e27e=""-->
+<!--                    style="fill: rgb(89, 95, 99);">-->
+<!--                    <path data-v-bd9f2bcc="" fill-rule="evenodd" clip-rule="evenodd"-->
+<!--                        d="M3.64645 3.64645C3.84171 3.45118 4.15829 3.45118 4.35355 3.64645L8 7.29289L11.6464 3.64645C11.8417 3.45118 12.1583 3.45118 12.3536 3.64645C12.5488 3.84171 12.5488 4.15829 12.3536 4.35355L8.70711 8L12.3536 11.6464C12.5488 11.8417 12.5488 12.1583 12.3536 12.3536C12.1583 12.5488 11.8417 12.5488 11.6464 12.3536L8 8.70711L4.35355 12.3536C4.15829 12.5488 3.84171 12.5488 3.64645 12.3536C3.45118 12.1583 3.45118 11.8417 3.64645 11.6464L7.29289 8L3.64645 4.35355C3.45118 4.15829 3.45118 3.84171 3.64645 3.64645Z">-->
+<!--                    </path>-->
+<!--                </svg>-->
+<!--                취소하기-->
+<!--            </div>-->
+<!--        </div>-->
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
