--- a/src/main/resources/templates/meeting-write/meeting-write.html
+++ b/src/main/resources/templates/meeting-write/meeting-write.html
@@ -8,7 +8,7 @@
     <link data-n-head="ssr" rel="preload" as="style"
         href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="../../static/images/meeting-write.css">
+    <link rel="stylesheet" href="../../static/css/meeting-write.css">
     <link rel="icon" href="favicon.ico">
     <style>
         @import url(https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css);
@@ -18,7 +18,8 @@
 
 <body>
     <div class="wrap">
-        <header style="width: 100%; height: 70px;position: fixed;top: 0;"></header>
+<!--        <header style="width: 100%; height: 70px;position: fixed;top: 0;"></header>-->
+        <header th:replace="~{main/header :: header}"></header>
         <div class="main-container">
             <div class="grid">
                 <div class="write-form-wrap">
@@ -257,8 +258,8 @@
                 </div>
             </div>
         </div>
-
-        <footer style="width: 100%; height: 26px;"></footer>
+<!--        <footer style="width: 100%; height: 26px;"></footer>-->
+        <footer th:replace="~{main/footer :: footer}"></footer>
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
