--- a/src/main/resources/templates/my-schedule/schedule.html
+++ b/src/main/resources/templates/my-schedule/schedule.html
@@ -8,7 +8,7 @@
     <link data-n-head="ssr" rel="preload" as="style"
         href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="schedule.css">
+    <link rel="stylesheet" href="../../static/css/schedule.css">
     <style>
         @import url(https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css);
         @import url('https://fonts.googleapis.com/css?family=Black+Han+Sans:400');
@@ -17,8 +17,7 @@
 
 <body>
     <div class="wrap">
-        <header style="width: 100%; height: 70px;position: fixed;top: 0;"></header>
-
+        <header th:replace="~{main/header :: header}"></header>
         <div class="main-container">
             <div class="main-container-big-box">
                 <div class="main-container-middle-box">
@@ -523,14 +522,14 @@
             <br><br><br><br><br><br><br>
         </div>
 
-        <footer style="width: 100%; height: 26px;"></footer>
+        <footer th:replace="~{main/footer :: footer}"></footer>
     </div>
 
 
 
 </body>
 <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-<script src="schedule.js"></script>
+<script src="../../static/js/schedule.js"></script>
 
 </script>
 
