--- a/src/main/resources/templates/general-community/edit.html
+++ b/src/main/resources/templates/general-community/edit.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>일반 게시글 작성 | 함께해Young</title>
+    <title>일반 게시글 수정 | 함께해Young</title>
     <link data-n-head="ssr" rel="preload" as="style"
         href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="../../static/css/general-write.css">
+    <link rel="stylesheet" href="../../static/css/general-edit.css">
     <link rel="icon" href="favicon.ico">
     <style>
         @import url(https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css);
@@ -26,10 +26,7 @@
                 <div class="write-form-wrap">
                     <div class="write-form-container">
                         <h2 class="write-form-title">
-                            일반 게시글 작성
-                            <p class="write-form-subtitle"><strong>일반 게시글</strong>을 작성해서 <strong>다양한 사람</strong>들과 다양한
-                                이야기를 <strong>함께</strong> 나누세요
-                            </p>
+                            일반 게시글 수정
                         </h2>
                         <div>
                             <div class="form-content-category-wrap">
@@ -94,7 +91,7 @@
                             &nbsp;/ 1000
                         </div>
                         <div class="summit-container">
-                            <button class="summit-btn">작성하기</button>
+                            <button class="summit-btn">수정하기</button>
                         </div>
                     </div>
                 </div>
