--- a/src/main/resources/templates/member/my-page.html
+++ b/src/main/resources/templates/member/my-page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
@@ -13,8 +13,8 @@
         @import url(https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css);
         @import url('https://fonts.googleapis.com/css?family=Black+Han+Sans:400');
     </style>
-    <link rel="icon" href="/static/images/favicon.ico">
-    <script src="/static/js/my-page.js"></script>
+    <link rel="icon" href="/images/favicon.ico">
+    <script src="/js/my-page.js"></script>
 </head>
 
 <body>
@@ -298,5 +298,5 @@
 <footer th:replace="~{main/footer :: footer}"></footer>
 </body>
 <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-<script src="/static/css/header-footer.css"></script>
+<script src="/css/header-footer.css"></script>
 </html>
