조남호 - 구동테스트 및 일부 페이지 수정

--- a/src/main/resources/static/css/my-schedule.css
+++ b/src/main/resources/static/css/my-schedule.css
@@ -391,7 +391,7 @@ header {
     position: fixed;
     width: 100%;
     height: 52px;
-    transition: 0.2;
+    transition: 0.2s;
     transform: translateX(-16px);
     background-color: #fff;
     z-index: 10;
@@ -422,28 +422,6 @@ header {
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 5;
-}
-
-/* 메인 컨테이너 작성해주세요 */
-.main-container {
-    min-height: calc(100vh - 342px);
-    width: 100%;
-    height: 100%;
-    overflow-x: hidden;
-    display: flex;
-    flex-direction: column;
-    margin-top: 70px;
-}
-
-
-/* Footer CSS ===============================================================================================================================================================*/
-footer {
-    border: 1px solid #eaecee;
-    bottom: 0;
-    width: 100%;
-    position: fixed;
-    background-color: #f3f4f5;
-    white-space: nowrap;
 }
 
 
@@ -512,7 +490,7 @@ footer {
 
 /* Main CSS ===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===o===*/
 .main-container {
-    min-height: calc(100vh - 342px);
+    min-height: calc(100vh - 96px);
     width: 100%;
     height: 100%;
     overflow-x: hidden;
