--- a/src/main/resources/templates/general-community/edit.html
+++ b/src/main/resources/templates/general-community/edit.html
@@ -8,8 +8,8 @@
     <link data-n-head="ssr" rel="preload" as="style"
         href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="../../static/css/general-edit.css">
-    <link rel="icon" href="favicon.ico">
+    <link rel="stylesheet" href="/css/general-community/general-edit.css">
+    <link rel="icon" href="/images/favicon.ico">
     <style>
         @import url(https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css);
         @import url('https://fonts.googleapis.com/css?family=Black+Han+Sans:400');
@@ -103,7 +103,7 @@
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-<script src="header.js"></script>
-<script src="../../static/js/form.js"></script>
+<script src="/js/header.js"></script>
+<script src="/js/form.js"></script>
 
 </html>
