--- a/src/main/resources/templates/meeting-community/post.html
+++ b/src/main/resources/templates/meeting-community/post.html
@@ -9,8 +9,8 @@
           href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css"
           crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/css/header-footer.css">
-    <link rel="stylesheet" type="text/css" href="/css/meeting-post.css">
-    <link rel="icon" href="favicon.ico">
+    <link rel="stylesheet" type="text/css" href="/css/meeting-community/meeting-post.css">
+    <link rel="icon" href="/images/favicon.ico">
     <style>
         @import url(https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css);
         @import url('https://fonts.googleapis.com/css?family=Black+Han+Sans:400');
@@ -818,7 +818,7 @@
         </svg>
         취소하기
     </div>
-    <!--        </div>-->
+</div>
 </body>
 <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=a8f30a1b4987602002ff92addf5150bb"></script>
