--- a/src/main/resources/templates/meeting-community/write.html
+++ b/src/main/resources/templates/meeting-community/write.html
@@ -8,8 +8,8 @@
     <link data-n-head="ssr" rel="preload" as="style"
         href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="../../static/css/meeting-write.css">
-    <link rel="icon" href="favicon.ico">
+    <link rel="stylesheet" href="css/meeting-write.css">
+    <link rel="stylesheet" href="/css/friend/friend-list.css">
     <style>
         @import url(https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css);
         @import url('https://fonts.googleapis.com/css?family=Black+Han+Sans:400');
@@ -265,8 +265,8 @@
 <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 <script type="text/javascript"
     src="//dapi.kakao.com/v2/maps/sdk.js?appkey=a8f30a1b4987602002ff92addf5150bb&libraries=services"></script>
-<script src="header.js"></script>
-<script src="../../static/js/form.js"></script>
-<script src="../../static/js/map.js"></script>
+<script src="/js/header-footer.js"></script>
+<script src="/js/form.js"></script>
+<script src="/js/map.js"></script>
 
 </html>
