--- a/src/main/resources/templates/member/bookmark.html
+++ b/src/main/resources/templates/member/bookmark.html
@@ -9,8 +9,8 @@
         href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css"
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/css/header-footer.css">
-    <link rel="stylesheet" type="text/css" href="/css/bookmark.css">
-    <link rel="icon" href="favicon.ico">
+    <link rel="stylesheet" type="text/css" href="/css/member/bookmark.css">
+    <link rel="icon" href="/images/favicon.ico">
     <style>
         @import url(https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css);
         @import url('https://fonts.googleapis.com/css?family=Black+Han+Sans:400');
@@ -665,8 +665,7 @@
         <footer th:replace="~{main/footer :: footer}"></footer>
     </div>
 </body>
-<script src=" https://code.jquery.com/jquery-3.7.0.min.js">
-</script>
-<script src="../../static/js/bookmark.js"></script>
+<script src=" https://code.jquery.com/jquery-3.7.0.min.js"></script>
+<script src="/js/member/bookmark.js"></script>
 
 </html>
