--- a/src/main/resources/templates/member/my-schedule.html
+++ b/src/main/resources/templates/member/my-schedule.html
@@ -9,7 +9,7 @@
           href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css"
           crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/css/header-footer.css">
-    <link rel="stylesheet" type="text/css" href="/css/my-schedule.css">
+    <link rel="stylesheet" type="text/css" href="/css/member/my-schedule.css">
     <style>
         @import url(https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css);
         @import url('https://fonts.googleapis.com/css?family=Black+Han+Sans:400');
@@ -537,8 +537,6 @@
 </body>
 <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 <script src="/js/header-footer.js"></script>
-<script src="/js/my-schedule.js"></script>
-
-</script>
+<script src="/js/member/my-schedule.js"></script>
 
 </html>
