--- a/src/main/resources/templates/message/list.html
+++ b/src/main/resources/templates/message/list.html
@@ -8,7 +8,7 @@
     <link data-n-head="ssr" rel="preload" as="style"
         href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="../../static/css/message-list.css">
+    <link rel="stylesheet" href="/css/message/message-list.css">
     <style>
         @import url(https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css);
         @import url('https://fonts.googleapis.com/css?family=Black+Han+Sans:400');
@@ -283,7 +283,6 @@
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-<script src="../../static/js/message-list.js"></script>
-
+<script src="/js/message/message-list.js"></script>
 
 </html>
