조남호 - 페이지 수정 완료 및 구조 일부 변경

--- a/src/main/resources/static/css/general-community/general-community.css
+++ b/src/main/resources/static/css/general-community/general-community.css
@@ -631,6 +631,13 @@ hr {
     position: fixed;
 }
 
+.mobile-detail-header-con {
+    display: none;
+}
+
+.first-menu {
+    display: flex;
+}
 
 
 @media (max-width: 1000px) {
