--- a/src/main/resources/templates/general-community/write.html
+++ b/src/main/resources/templates/general-community/write.html
@@ -8,7 +8,8 @@
     <link data-n-head="ssr" rel="preload" as="style"
         href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/general-community/general-write.css">
+    <link rel="stylesheet" type="text/css" href="/css/header-footer.css">
+    <link rel="stylesheet" type="text/css" href="/css/general-community/general-write-edit.css">
     <link rel="icon" href="/images/favicon.ico">
     <style>
         @import url(https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css);
@@ -106,7 +107,7 @@
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-<script src="/js/header-footer.js"></script>
+<script src="/js/general-header.js"></script>
 <script src="/js/form.js"></script>
 
 </html>
