--- a/src/main/resources/static/css/general-community/general-post.css
+++ b/src/main/resources/static/css/general-community/general-post.css
@@ -282,8 +282,6 @@ hr {
 .main-container {
     min-height: calc(100vh - 140px);
     width: 100%;
-    height: 100%;
-    overflow-x: hidden;
     display: flex;
     flex-direction: column;
     margin-top: 114px;
@@ -959,6 +957,9 @@ hr {
     height: 0;
 }
 
+.first-menu {
+    display: flex;
+}
 
 
 
