--- a/src/main/resources/static/css/meeting-community/meeting-post.css
+++ b/src/main/resources/static/css/meeting-community/meeting-post.css
@@ -282,8 +282,6 @@ hr {
 .main-container {
     min-height: calc(100vh - 140px);
     width: 100%;
-    height: 100%;
-    overflow-x: hidden;
     display: flex;
     flex-direction: column;
     margin-top: 114px;
@@ -436,7 +434,7 @@ hr {
     border-color: rgb(243, 244, 245);
     margin: 6px 0;
     border-style: solid;
-    border: 1px 0 0 0;
+    border: 1px;
     height: 0;
 }
 
@@ -1177,6 +1175,10 @@ hr {
     border-top: 1px solid rgb(243, 244, 245);
     width: 100%;
     height: 0;
+}
+
+.second-menu {
+    display: flex;
 }
 
 @media (max-width: 1000px) {
