--- a/src/main/resources/templates/meeting-community/edit.html
+++ b/src/main/resources/templates/meeting-community/edit.html
@@ -8,7 +8,8 @@
     <link data-n-head="ssr" rel="preload" as="style"
         href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/meeting-community/meeting-edit.css">
+    <link rel="stylesheet" type="text/css" href="/css/header-footer.css">
+    <link rel="stylesheet" type="text/css" href="/css/meeting-community/meeting-write-edit.css">
     <link rel="icon" href="/images/favicon.ico">
     <style>
         @import url(https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css);
@@ -267,7 +268,7 @@
 <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 <script type="text/javascript"
     src="//dapi.kakao.com/v2/maps/sdk.js?appkey=a8f30a1b4987602002ff92addf5150bb&libraries=services"></script>
-<script src="/js/header-footer.js"></script>
+<script src="/js/meeting-header.js"></script>
 <script src="/js/form.js"></script>
 <script src="/js/map.js"></script>
 
