--- a/src/main/resources/templates/meeting-community/post.html
+++ b/src/main/resources/templates/meeting-community/post.html
@@ -139,8 +139,6 @@
                 <button class="location-time-btn" id="map">
                     <div class="map-icon">
                         <?xml version="1.0" ?>
-                        <!DOCTYPE svg
-                        PUBLIC '-//W3C//DTD SVG 1.1//EN' 'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>
                         <svg enable-background="new 0 0 25 25" id="Layer_1" version="1.1" width="25" height="25"
                              viewBox="0 0 64 64" xml:space="preserve" style="fill: #fff;"
                              xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -277,9 +275,6 @@
                                             </div>
                                             <div class="participant-add-friend-con">
                                                 <button class="add-friend-btn">
-                                                    <!DOCTYPE svg
-                                                    PUBLIC '-//W3C//DTD SVG 1.1//EN'
-                                                    'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>
                                                     <svg id="Layer_1"
                                                          style="enable-background:new 0 0 32 32; fill: #fff;"
                                                          version="1.1" viewBox="0 0 32 32" width="10px"
@@ -315,9 +310,6 @@
                                             </div>
                                             <div class="participant-add-friend-con">
                                                 <button class="add-friend-btn">
-                                                    <!DOCTYPE svg
-                                                    PUBLIC '-//W3C//DTD SVG 1.1//EN'
-                                                    'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>
                                                     <svg id="Layer_1"
                                                          style="enable-background:new 0 0 32 32; fill: #fff;"
                                                          version="1.1" viewBox="0 0 32 32" width="10px"
@@ -353,9 +345,6 @@
                                             </div>
                                             <div class="participant-add-friend-con">
                                                 <button class="add-friend-btn">
-                                                    <!DOCTYPE svg
-                                                    PUBLIC '-//W3C//DTD SVG 1.1//EN'
-                                                    'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>
                                                     <svg id="Layer_1"
                                                          style="enable-background:new 0 0 32 32; fill: #fff;"
                                                          version="1.1" viewBox="0 0 32 32" width="10px"
@@ -391,9 +380,6 @@
                                             </div>
                                             <div class="participant-add-friend-con">
                                                 <button class="add-friend-btn">
-                                                    <!DOCTYPE svg
-                                                    PUBLIC '-//W3C//DTD SVG 1.1//EN'
-                                                    'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>
                                                     <svg id="Layer_1"
                                                          style="enable-background:new 0 0 32 32; fill: #fff;"
                                                          version="1.1" viewBox="0 0 32 32" width="10px"
@@ -429,9 +415,6 @@
                                             </div>
                                             <div class="participant-add-friend-con">
                                                 <button class="add-friend-btn">
-                                                    <!DOCTYPE svg
-                                                    PUBLIC '-//W3C//DTD SVG 1.1//EN'
-                                                    'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>
                                                     <svg id="Layer_1"
                                                          style="enable-background:new 0 0 32 32; fill: #fff;"
                                                          version="1.1" viewBox="0 0 32 32" width="10px"
@@ -467,9 +450,6 @@
                                             </div>
                                             <div class="participant-add-friend-con">
                                                 <button class="add-friend-btn">
-                                                    <!DOCTYPE svg
-                                                    PUBLIC '-//W3C//DTD SVG 1.1//EN'
-                                                    'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>
                                                     <svg id="Layer_1"
                                                          style="enable-background:new 0 0 32 32; fill: #fff;"
                                                          version="1.1" viewBox="0 0 32 32" width="10px"
@@ -822,7 +802,7 @@
 </body>
 <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=a8f30a1b4987602002ff92addf5150bb"></script>
-<script src="/js/header-footer.js"></script>
+<script src="/js/meeting-header.js"></script>
 <script src="/js/meeting-post.js"></script>
 <script src="/js/map-display.js"></script>
 
