헤더 푸터 경로 수정 및 메시지 목록 pr

--- a/src/main/resources/templates/main/footer.html
+++ b/src/main/resources/templates/main/footer.html
@@ -147,6 +147,6 @@
     </footer>
 </body>
 <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-<script src="../../static/js/header-footer.js"></script>
+<script src="/static/js/header-footer.js"></script>
 
 </html>
