--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -344,5 +344,5 @@
     </header>
 </body>
 <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-<script src="../../static/js/header-footer.js"></script>
+<script src="/static/js/header-footer.js"></script>
 </html>
