--- a/src/main/resources/templates/message/list.html
+++ b/src/main/resources/templates/message/list.html
@@ -9,16 +9,21 @@
         href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css"
         crossorigin="anonymous">
     <link rel="stylesheet" href="/css/message/message-list.css">
+    <link rel="stylesheet" href="/css/header-footer.css"></link>
+    <link rel="icon" href="/images/favicon.ico">
     <style>
         @import url(https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css);
         @import url('https://fonts.googleapis.com/css?family=Black+Han+Sans:400');
     </style>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <script src="/js/message/message-list.js"></script>
+    <script src="/js/header-footer.js"></script>
 </head>
 
 <body>
-    <div class="wrap">
+<header th:replace="~{main/header :: header}"></header>
+<div class="wrap">
 <!--        <header style="width: 100%; height: 70px;position: fixed;top: 0;"></header>-->
-        <header th:replace="~{main/header :: header}"></header>
         <div class="main-container">
             <div class="main-container-big-box">
                 <div class="main-container-middle-box">
@@ -180,7 +185,6 @@
             </div>
             <br><br><br><br><br><br><br><br><br><br><br><br><br>
         </div>
-        <footer th:replace="~{main/footer :: footer}"></footer>
 
 <!--        <footer style="width: 100%; height: 26px;"></footer>-->
 <!--        <ul class="mobile-bottom-nav-con">-->
@@ -281,8 +285,7 @@
 <!--            </li>-->
 <!--        </ul>-->
     </div>
+<footer th:replace="~{main/footer :: footer}"></footer>
 </body>
-<script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-<script src="/js/message/message-list.js"></script>
 
 </html>
