--- a/src/main/resources/templates/member/my-page.html
+++ b/src/main/resources/templates/member/my-page.html
@@ -9,14 +9,15 @@
           href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css"
           crossorigin="anonymous">
     <link rel="stylesheet" href="/css/member/my-page.css">
+    <link rel="stylesheet" href="/css/header-footer.css">
+    <link rel="icon" href="/images/favicon.ico">
     <style>
         @import url(https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css);
         @import url('https://fonts.googleapis.com/css?family=Black+Han+Sans:400');
     </style>
-    <link rel="icon" href="/images/favicon.ico">
-    <script src="/js/member/my-page.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-    <script src="/css/header-footer.css"></script>
+    <script src="/js/member/my-page.js"></script>
+    <script src="/js/header-footer.js"></script>
 </head>
 
 <body>
