변경사항 적용함. header, footer 제외 ver.

--- a/src/main/resources/templates/message/list.html
+++ b/src/main/resources/templates/message/list.html
@@ -8,20 +8,20 @@
     <link data-n-head="ssr" rel="preload" as="style"
         href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/message/message-list.css">
-    <link rel="stylesheet" href="/css/header-footer.css"></link>
+    <link rel="stylesheet" href="../../static/css/message/message-list.css">
+    <link rel="stylesheet" href="../../static/css/header-footer.css"></link>
     <link rel="icon" href="/images/favicon.ico">
     <style>
         @import url(https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css);
         @import url('https://fonts.googleapis.com/css?family=Black+Han+Sans:400');
     </style>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-    <script src="/js/message/message-list.js"></script>
-    <script src="/js/header-footer.js"></script>
+    <script src="../../static/js/message/message-list.js"></script>
+    <script src="../../static/js/header-footer.js"></script>
 </head>
 
 <body>
-<header th:replace="~{main/header :: header}"></header>
+<header th:replace="~{main/header::header}"></header>
 <div class="wrap">
 <!--        <header style="width: 100%; height: 70px;position: fixed;top: 0;"></header>-->
         <div class="main-container">
@@ -183,7 +183,6 @@
                     </div>
                 </div>
             </div>
-            <br><br><br><br><br><br><br><br><br><br><br><br><br>
         </div>
 
 <!--        <footer style="width: 100%; height: 26px;"></footer>-->
