--- a/src/main/resources/templates/message/write.html
+++ b/src/main/resources/templates/message/write.html
@@ -8,7 +8,8 @@
     <link data-n-head="ssr" rel="preload" as="style"
         href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/message/message-write.css">
+    <link rel="stylesheet" href="../../static/css/message/message-write.css">
+    <link rel="stylesheet" href="../../static/css/header-footer.css"></link>
     <style>
         @import url(https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable-dynamic-subset.css);
         @import url('https://fonts.googleapis.com/css?family=Black+Han+Sans:400');
@@ -52,6 +53,5 @@
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-<script src="/js/message/message-write.js"></script>
-
+<script src="../../static/js/message/message-write.js"></script>
 </html>
