조남호 - 백 작업진행중

--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -22,7 +22,7 @@
             <div class="header-nav-container">
                 <div class="header-nav-container-left">
                     <div class="header-logo">
-                        <a href="#">
+                        <a href="/">
                             <svg xmlns="http://www.w3.org/2000/svg" width="150" height="40" viewBox="0 0 101 16"
                                 style="display: flex; align-items: center">
                                 <text id="함께해YO" class="cls-1" transform="translate(50.553 13.035) scale(0.325)">
