메시지 서비스 중간 업데이트

--- a/src/main/resources/templates/member/my-page.html
+++ b/src/main/resources/templates/member/my-page.html
@@ -261,7 +261,6 @@
                     </div>
                 </label>
             </div>
-
             <div class="commercialNotificationAgreementContainer">
                 <input id="commercialNotification" class="commercialNotification " type="checkbox">
                 <label for="commercialNotification" class="able" id="commercialNotificationLabel">
@@ -270,7 +269,6 @@
                     </div>
                 </label>
             </div>
-
             <div class="contactInfoContainer">
                 <div class="contactInfoTitle">
                     연락처
@@ -279,7 +277,7 @@
                     각종 알림을 받을 연락처를 입력해주세요.
                 </div>
                 <span>
-                    <form action="" id="phoneNumberForm">
+                    <form action="#" id="phoneNumberForm">
                         <div class="phoneNumberContainer">
                             <span>
                                 <div class="phoneNumberInputContainer">
